src/objects/ServiceHeaders__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>AcceptEncoding__c</fullName>
        <label>Accept Encoding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentEncoding__c</fullName>
        <label>Content Encoding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentLength__c</fullName>
        <label>Content Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentType__c</fullName>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Headers</label>
</CustomObject>